Fix gaps for LastPosts and Features

--- a/components/home/Features.module.css
+++ b/components/home/Features.module.css
@@ -23,7 +23,7 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 2rem;
-    margin-top: 5rem;
+    margin-top: 3.5rem;
 }
 
 .feature {
