--- a/components/home/LastPosts.module.css
+++ b/components/home/LastPosts.module.css
@@ -14,7 +14,7 @@
     display: grid;
     grid-template-columns: 1fr;
     gap: 2rem;
-    margin-top: 4rem;
+    margin-top: 3.5git rem;
 }
 
 .post {
